# batchgraph

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/batchgraph/: __init__.py
tests/: __init__.py  test_everything.py  utils.py
